SENTRY-1834: Fix build failures when hive-authz2 profile is enabled (kalyan kumar kalvagadda reviewed by Colm O hEigeartaigh)